...
import 'package:flutter/material.dart';
import 'package:redux_comp/app_state.dart';
import 'dart:ui';

class Login extends StatelessWidget {
  final Store<AppState> store;
  const Login({Key? key, required this.store}) : super(key: key);

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      body: Stack(
        children: <Widget>[
...
                padding: const EdgeInsets.all(20),
                child: Column(
                  children: <Widget>[
                    //*****************email**********************
                    TextFormField(
                      decoration: InputDecoration(
                        labelText: 'email',
                        labelStyle: const TextStyle(color: Colors.white),
                        floatingLabelBehavior: FloatingLabelBehavior.auto,
                        enabledBorder: OutlineInputBorder( 
                          borderRadius: BorderRadius.circular(30),
                          borderSide: const BorderSide(
                            color: Colors.grey,
...
                        color: Colors.transparent,
                      ),
                    //*****************password**********************
                   TextFormField(
                      obscureText: true,
                      decoration: InputDecoration(
                        labelText: 'password',
                        labelStyle: const TextStyle(color: Colors.white),
                        floatingLabelBehavior: FloatingLabelBehavior.auto,
                        enabledBorder: OutlineInputBorder( 
                          borderRadius: BorderRadius.circular(30),
                          borderSide: const BorderSide(
                            color: Colors.grey,
...
